[package]
name = "fused_error"
version = "0.1.2" # update html_root_url in src/lib.rs and README.md

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
description = "A simple library for working with composable errors."
documentation = "https://docs.rs/fused_error"
edition = "2021"
keywords = ["error-handling", "error"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/seancroach/fused_error"

[dependencies.syn]
version = "1"
optional = true
default-features = false

[dev-dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["derive", "full", "parsing"] }
version-sync = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
